--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
-}
+} */
 
 body {
   font-family: "Roboto", sans-serif;
@@ -15,50 +15,50 @@ body {
   margin: 0 auto;
 }
 
-.header {
+.head {
   height: 60px;
   background-color: #305f8e;
   color: #fff;
   padding: 0 8px;
 }
 
-.header div {
+.head div {
   position: relative;
   float: left;
   top: 15%;
 }
 
-.header .avatar {
+.head .avatar {
   width: 35px;
   height: auto;
   margin: 0 15px 0 5px;
 }
-.header .avatar img {
+.head .avatar img {
   background-color: #fff;
   border-radius: 50%;
   width: 100%;
 }
 
-.header .title1 {
+.head .title1 {
   font-size: 18px;
   font-weight: 600;
   margin: 0 0 0 5px;
 }
 
-.header .title2 {
+.head .title2 {
   display: block;
   font-size: 14px;
   font-weight: 400;
 }
 
-.translete {
+.translator {
   position: relative;
   background: beige url("../img/fondo.jpg") repeat;
-  height: calc(70dvh - 60px);
+  height: calc(70dvh - 42px);
   z-index: 0;
 }
 
-.translete .translate-containerr {
+.translator .translator-container {
   height: calc(70dvh - 100px);
   padding: 0 16px;
   margin-bottom: 5px;
@@ -66,7 +66,7 @@ body {
   overflow-x: hidden;
 }
 
-.translate-fmr {
+.frm-translator {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -76,13 +76,13 @@ body {
   z-index: 2;
 }
 
-.translate-fmr div,
-.translate-fmr input {
+.frm-translator div,
+.frm-translator input {
   height: 100%;
   background: #fff;
 }
 
-.translate-fmr .icon {
+.frm-translator .icon{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -91,7 +91,7 @@ body {
   width: 50px;
 }
 
-.translate-fmr .translate-box {
+.frm-translator .translate-box {
   border: 0;
   flex: 4;
   font-size: 16px;
@@ -111,7 +111,7 @@ body {
   border-radius: 10px;
 }
 
-.translate-fmr .accept {
+.frm-translator .accept {
   border-radius: 50%;
   background-color: #ffff;
   cursor: pointer;
@@ -119,7 +119,7 @@ body {
   overflow: hidden;
 }
 
-.translate-fmr .accept .send {
+.frm-translator .accept .send {
   border-radius: 50%;
   height: 45px;
   aspect-ratio: 1;
@@ -128,27 +128,32 @@ body {
   justify-content: center;
 }
 
+.frm-translator .accept .send img {
+  height: 45px;
+  aspect-ratio: 1;
+}
+
 .metadata {
-  display: inline-block;
-  padding: 0 0 0 8px;
   position: relative;
+  display: inline-block;
+  padding: 0 0 0 7px;
   bottom: -4px;
 }
 
 .metadata .hour {
-  color: #fff;
+  color: #555;
   font-size: 11px;
 }
 
 .metadata .seen {
   display: inline-block;
   margin-left: 3px;
-  height: 20px;
+  height: 15px;
   width: auto;
 }
 
 .text {
-  color: black;
+  color: #fff;
   clear: both;
   line-height: 18px;
   font-size: 15px;
@@ -160,7 +165,7 @@ body {
 }
 
 .text::after {
-  /* content: ''; */
+  /* content: ""; */
   position: absolute;
   width: 0;
   height: 0;
@@ -172,22 +177,27 @@ body {
 }
 
 .text.sent {
-  background-color: #3a79b4;
-  border-radius: 5px 0 5px 5px;
+  background-color: #a8b7e6;
+  border-radius: 5px 0px 5px 5px;
   float: right;
 }
 
 .text.received {
-  background-color: #a7a7a7;
+  background-color: #4d4d4d;
   border-radius: 0px 5px 5px 5px;
   float: left;
 }
-
+.text.received .hour {
+  color: #ccc;
+}
+.text.sent {
+  color: #2c2c2c;
+}
 .text.sent::after {
   content: "";
   position: absolute;
   border-width: 0px 0px 10px 10px;
-  border-color: transparent transparent transparent #3a79b4;
+  border-color: transparent transparent transparent #a8b7e6;
   top: 0;
   right: -10px;
 }
@@ -196,7 +206,7 @@ body {
   content: "";
   position: absolute;
   border-width: 0px 10px 10px 0px;
-  border-color: transparent #a7a7a7 transparent transparent;
+  border-color: transparent #4d4d4d transparent transparent;
   top: 0;
   left: -10px;
 }
